API: Created 'AnyAppointments' Admin Endpoint
