# api/src/config/routes/protected/AdminRoutes.ts
@@ -4,11 +4,14 @@ import endpointTimeout from "../../../utilities/core/EndpointTimeout.js";
 
 // Imports guards
 import guardIsAdmin from "../../../guards/IsAdmin.js";
+
+// Import account endpoints
 import schemaGetSingleAccount from "../../../schema/accounts/SchemaGetSingleAccount.js";
 import routeGetSingleAccount from "../../../routes/accounts/RouteGetSingleAccount.js";
 
-// Import routes & schemas
-//TODO Insert admin endpoints here
+// Import appointment endpoints
+import schemaAnyAppointments from "../../../schema/appointments/SchemaAnyAppointments.js";
+import routeAnyAppointments from "../../../routes/appointments/RouteAnyAppointments.js";
 
 /**
  * Function to declare all internally protected admin routes
@@ -24,10 +27,16 @@ const protectedAdminRoutes = (): {
     // Guards
     protectedAdminRoutes.addHook("onRequest", guardIsAdmin);
 
-    //Get account endpoint
+    // Account endpoints
     protectedAdminRoutes.get("/account/:id",
       {schema: schemaGetSingleAccount },
       endpointTimeout(routeGetSingleAccount, 5000), // 5 Seconds
+    );
+
+    // Appointment endpoints
+    protectedAdminRoutes.get("/appointments/:type",
+      { schema: schemaAnyAppointments },
+      endpointTimeout(routeAnyAppointments, 10000), // 10 Seconds
     );
   },
   prefix: '/admin',
